grid not working

--- a/index.html
+++ b/index.html
@@ -11,9 +11,23 @@
 </head>
 
 <body>
-    <header>
-        <h1>Hello, World</h1>
-    </header>
+    <div class="top-containter">
+        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
+        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
+        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
+        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
+        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
+        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
+        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
+        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
+        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
+        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
+        
+
+        <header>
+            <h1>Travelsite</h1>
+        </header>
+    </div>
 </body>
 
 </html>
