--- a/index.html
+++ b/index.html
@@ -7,26 +7,36 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Travel Site</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="reset.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 </head>
 
 <body>
     <div class="top-containter">
-        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
-        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
-        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
-        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
-        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
-        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
-        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
-        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
-        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
-        <div class="top-image"><img src="images/tokyo-pexel.jpg" alt="" ></div>
-        
-
-        <header>
+        <header id="header1">
             <h1>Travelsite</h1>
         </header>
+        <article class="top-image">
+            <img src="images/tokyo-pexel.jpg" alt="">
+        </article>
+        <article class="top-image">
+            <img src="images/tokyo-pexel.jpg" alt="">
+        </article>
+        <article class="top-image">
+            <img src="images/tokyo-pexel.jpg" alt="">
+        </article>
+        <article class="top-image">
+                <img src="images/tokyo-pexel.jpg" alt="">
+        </article>
+        <article class="top-image">
+                <img src="images/tokyo-pexel.jpg" alt="">
+        </article>
+        <article class="top-image">
+                <img src="images/tokyo-pexel.jpg" alt="">
+        </article>
+
+
+
     </div>
 </body>
 
